<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/title_register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/gotoBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back_arrow"
            android:onClick="gotoBack"
            android:src="@drawable/backtolist" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/edit_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ico_user"
                    android:scaleType="centerCrop"/>

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/cpasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:hint="@string/hint_cpassword"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />


                <RelativeLayout
                    android:id="@+id/registerUserTypeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe">

                    <Spinner
                        android:id="@+id/registerUserType"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:entries="@array/register_user_type"
                        android:isScrollContainer="false"
                        android:popupBackground="#fff"
                        android:scrollbars="none"
                        android:theme="@style/SpinnerWhiteTextColor" />

                    <ImageButton
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="13dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/hint_drop_down"
                        android:scaleType="fitXY"
                        android:src="@drawable/dropdown_icon" />
                </RelativeLayout>


                <EditText
                    android:id="@+id/schoolEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:hint="Organization name"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe">

                    <Spinner
                        android:id="@+id/securityQuestions"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:entries="@array/register_security_questions"
                        android:isScrollContainer="false"
                        android:popupBackground="#fff"
                        android:scrollbars="none"
                        android:theme="@style/SpinnerWhiteTextColor" />

                    <ImageButton
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="13dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/hint_drop_down"
                        android:scaleType="fitXY"
                        android:src="@drawable/dropdown_icon" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/answerEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:entries="@array/days_array"
                    android:hint="@string/hint_answer"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/hint_or_register_with"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/otherTypeRegisterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/facebookLogin"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="7dp"
                        android:contentDescription="@string/hint_facebook"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/googlePlusLogin"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="7dp"
                        android:contentDescription="@string/hint_google_plus"
                        android:src="@drawable/googleplus" />

                    <ImageView
                        android:id="@+id/twitterLogin"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="7dp"
                        android:contentDescription="@string/hint_twitter"
                        android:src="@drawable/twitter" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:text="@string/button_submit"
        android:textColor="@color/blue"
        android:textSize="20dp" />

</LinearLayout>