<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="66dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/gotoBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/back_arrow"
                android:onClick="gotoBack"
                android:src="@drawable/backtolist" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Employee"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgDelete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/delete" />


            <ImageView
                android:id="@+id/navigationButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:contentDescription="RightIcon"
                android:src="@drawable/per" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/edit_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ico_user" />

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="#187ebe"
                        android:ems="30"
                        android:hint="@string/hint_name"
                        android:inputType="textPersonName"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp">

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="#187ebe"
                        android:ems="30"
                        android:hint="@string/hint_email_address"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp">

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@+id/phoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="#187ebe"
                        android:ems="30"
                        android:hint="Phone Number"
                        android:inputType="phone"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />


                </LinearLayout>
            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:text="@string/button_submit"
            android:textColor="@color/blue"
            android:textSize="20dp" />
    </LinearLayout>

    <include layout="@layout/right_navigation" />
</RelativeLayout>