<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="Client Details"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/gotoBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back_arrow"
            android:onClick="gotoBack"
            android:src="@drawable/backtolist" />

            <ImageView
                android:id="@+id/navigationButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:contentDescription="RightIcon"
                android:src="@drawable/per" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/client_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ico_user"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/companyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:hint="Organization name"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#187ebe"
                    android:ems="30"
                    android:hint="Location"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="25sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>

    <include layout="@layout/right_navigation" />
</RelativeLayout>